--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,13 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea/
+*.iml
+*.log
+.eslintcache
+.eslintrc.js
+.prettierrc.json
+tsconfig.json
 
 npm-debug.log*
 yarn-debug.log*
